added homepage field

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react_portfolio",
+  "homepage": "https://zreggert.github.io/dev_portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
